two blogpost out

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
       <a href="/photos.html" class="about mobile-photos">photos</a>
-      <a href="/codex-2022.html" class="about codex">codex</a>
+      <a href="/codex-2024.html" class="about codex">codex</a>
       <!-- <a href="writing.html" class="writing">writing</a> -->
       <!-- <a href="/photos.html" class="writing">photos</a> -->
     </div>
@@ -41,20 +41,26 @@
       <div class="lh-copy project-body">
         <div class="pb3 pb4-m pb2-l mb5e">
           <h2 class="f2 f1-m f1-l">About me</h2>
-          <img class="br4" src="./photos/about-photos/me-alpes.png">
+       
           <p class="f5 f3-m f3-l pb3">
-            Hey there, friend. I'm Alex, and I am a: dad, husband, son, brother, designer, writer and martial artist.
+            Greetings, friend! I'm Alexander, a dedicated full-time father, husband, and designer.
+          </p>
+
+          <img class="br5 pb3" src="./photos/about-photos/me-alpes.png">
+          <p class="f5 f3-m f3-l pb3">
+            My design journey began at 17, sparked by an opportunity from my graphic design teacher. Crafting a successful poster for the Sofia Philharmonic Orchestra ignited a passion that resonated deeply within me. Since that pivotal moment, I felt as design has been my calling, and I've embraced it since.
           </p>
           <p class="f5 f3-m f3-l pb3">
-            In my personal life, I am an extroverted, warm-hearted dude who loves philosophy, nature, animals and
-            martial arts. You can catch me rolling on the mats in my jiujitsu gym, shredding trails on my bike in the
-            nearby forests or walking around the city with my wife and my emotionally unstable chihuahua.
+            Fast forward 11 years, and I find myself thriving as a UX Team Lead at Quickbase, delving into the dynamic realms of leadership and management. Reflecting on my journey, I've always gravitated towards leadership, finding immense fulfillment in aiding the growth of others while evolving alongside them.
           </p>
           <p class="f5 f3-m f3-l pb3">
-            And while on the topic of wife, I consider myself a fortunate person, primarily because seven years ago, I
-            met my best friend, Diana, which I married in 2020. In May 2022, we were blessed with our baby daughter, the
-            light of our lives. We live and work in our cosy home, surrounded by plants and our memorabilia.
+            Beyond my professional pursuits, I'm an extroverted, occasionally long-winded dude with a profound interest in philosophy, psychology, coffee, and physical training. 
           </p>
+          </p>
+          <p class="f5 f3-m f3-l pb3">
+            In the realm of personal life, I proudly wear the badge of "dad" to Sofia, a delightful little rascal that became the primary reason for me to exist. Sofia's presence is a testament to the love I share with my equally remarkable wife, the cornerstone of my world. In essence, my family is the heartbeat of my existence, influencing almost every action, inaction and decision I take.
+          </p>
+          <img class="br5 pb3" src="./photos/about-photos/sofi-sasho.jpeg">
         </div>
         <div class="mb5">
           <h2 class="f3 f1-m f1-l b bb">Let's connect</h2>
@@ -62,7 +68,7 @@
               href="https://twitter.com/alextraykov"><span>🐦</span>Twitter</a>
             <a class="db f4 f3-ns" href="https://dribbble.com/alextraykoff"><span>🏀</span>Dribbble</a>
             <a class="f4 f3-ns db" href="https://www.instagram.com/alex.works/"><span>📸</span>Instagram</a>
-            <a class="db f4 f3-ns no-underline black" href=""><span>🎮</span>Activison account: polecatsky#6353045</a>
+            <a class="f4 f3-ns db" href="https://www.linkedin.com/in/alextraykov/"><span>🔗</span>LinkedIn</a>
           </div>
         </div>
         <h2 class="f3 f1-m f1-l b bb mb3">Work experience</h2>
@@ -72,16 +78,25 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Quickbase</h3>
-            <p class="dark-gray">July 2022 - Present</p>
+            <h3 class="f3 f2-m f3 b">Quickbase - UX Team Lead</h3>
+            <p class="dark-gray">July 2022 - Current</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
-            Working as a Senior Product Desginer on TBD 🤐
+            Working as a Senior Product Desginer on Quickbase's Solution Hub. Was design lead for one of the biggest QB initiatives of 2022. Worked cross-colaboratively with different functions to achieve the expected goals.
           </p>
         </div>
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">PeakShift</h3>
+            <h3 class="f3 f2-m f3 b">Quickbase - Senior Product Designer</h3>
+            <p class="dark-gray">July 2022 - July 2023</p>
+          </div>
+          <p class="f5 f4-m f4-l lh-copy">
+            Working as a Senior Product Desginer on Quickbase's Solution Hub. Was design lead for one of the biggest QB initiatives of 2022. Worked cross-colaboratively with different functions to achieve the expected goals.
+          </p>
+        </div>
+        <div class="pb3 section mb4">
+          <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
+            <h3 class="f3 f2-m f3 b">PeakShift - Senior Product Designer</h3>
             <p class="dark-gray">January 2022 - June 2022</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -92,7 +107,7 @@
         </div>
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Toptal</h3>
+            <h3 class="f3 f2-m f3 b">Toptal - Product Designer</h3>
             <p class="dark-gray">April 2019 - January 2022</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -102,7 +117,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">MarketVision Consulting Group</h3>
+            <h3 class="f3 f2-m f3 b">MarketVision Consulting Group - Product Designer</h3>
             <p class="dark-gray">August 2018 - April 2019</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -116,7 +131,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h2 class="f3 f2-m f2-l b">eAssist</h2>
+            <h2 class="f3 f2-m f3 b">eAssist - Product Designer</h2>
             <p class="dark-gray">January 2018 - August 2018</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">In eAssist I have the abilit lh-copyy to work on a rich variety of digital
@@ -128,8 +143,8 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Pruvit</h3>
-            <p class="dark-gray">May 2017 - Present</p>
+            <h3 class="f3 f2-m f3 b">Pruvit - Product Designer</h3>
+            <p class="dark-gray">May 2017 - January 2018</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">My main focus is the design an lh-copyd maintanence of the component design
             systems for the
@@ -142,7 +157,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Canbrowser</h3>
+            <h3 class="f3 f2-m f3 b">Canbrowser - UI/UX Designer</h3>
             <p class="dark-gray">Apr 2017 - April 2018</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">Canbrowser is a privat lh-copye initiative to support the CAN industry with
@@ -155,7 +170,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Noxious.one</h3>
+            <h3 class="f3 f2-m f3 b">Noxious.one - UI/UX Designer</h3>
             <p class="dark-gray">Juy 2016 - November 2016</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -167,7 +182,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Kickflip</h3>
+            <h3 class="f3 f2-m b">Kickflip - Junior UI/UX Designer </h3>
             <p class="dark-gray">August 2015 - December 2015</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -180,7 +195,7 @@
         <!-- Work item -->
         <div class="pb3 section mb4">
           <div class="db b--moon-gray flex-l flex-m justify-between-l justify-between-m items-center">
-            <h3 class="f3 f2-m f2-l b">Stenik</h3>
+            <h3 class="f3 f2-m b">Stenik Junior Web Designer</h3>
             <p class="dark-gray">December 2014 - April 2015</p>
           </div>
           <p class="f5 f4-m f4-l lh-copy">
@@ -199,7 +214,7 @@
       <!-- <img class="logo" src="logo.svg"> -->
       <h3 class="f4 b">AT</h3 class="f3">
     </a>
-    <p>Made with love and coffee in Sofia, 2022 </p>
+    <p>Made with love and coffee in Sofia, 2024 </p>
     <div class="nav-items">
       <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
       <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
