--- a/brewculator.html
+++ b/brewculator.html
@@ -18,7 +18,7 @@
 <script src="movement.js"></script>
 <script src="js/anime.min.js"></script>
 
-<body>
+<body>R
   <div class="container">
     <div class=" full-width-brewculator">
       <nav class="home container anim1">
@@ -42,13 +42,13 @@
             <h1 class="project-head anim1">
               Brewculator
             </h1>
-            <p class="anim1 f5 b f3-ns">Product Design Case Study</p>
+            <p class="anim1 f5 b f4-ns">Product Design Case Study</p>
             <p class="project-copy mw6 lh-copy anim1">A number of ratios for popular brewing methods, fine control over
               its measuring units and general coffee brewing tips all together
               in one powerful coffee assistant.
             </p>
           </div>
-          <img class="mb5 anim1 project-image-highlighted" src="./photos/brewculator/brewculator-twophones.png">
+          <img class="mb5 anim1 w-50" src="./photos/brewculator/brewculator-twophones.png">
         </div>
       </header>
     </div>
@@ -220,7 +220,7 @@
           <!-- <img class="logo" src="logo.svg"> -->
           <h3 class="f4 b tc tl-ns">Alexander Traykov</h3 class="f3">
         </a>
-        <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2020 </p>
+        <p class="f5 tc tl-ns pb2 pb0-ns">Made with love and coffee in Sofia, 2024 </p>
         <div class="nav-items">
           <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
           <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
