--- a/codex-2024.html
+++ b/codex-2024.html
@@ -40,7 +40,7 @@
             <a href="/writing.html" class="about">writing</a>
             <a href="/about.html" class="about">about</a>
             <a href="/photos.html" class="about mobile-photos">photos</a>
-            <a href="/codex-2022.html" class="about codex">codex</a>
+            <a href="/codex-2024.html" class="about codex">codex</a>
             <!-- <a href="writing.html" class="writing">writing</a> -->
             <!-- <a href="/photos.html" class="writing">photos</a> -->
         </div>
@@ -56,31 +56,40 @@
         <div class="pb3 section">
             <div class="mw7 lh-copy project-body">
                 <div class="pt5 pb3 bb mb3">
-                    <h1 class="f2">Codex Vitae 2022</h1>
-                    <p class="f3">A documentation of my beliefs in the year 2022</p>
-                    <a class="pt" href="./codex-2019.html">Codex Vitae 2019</a>
+                    <h1 class="f2">Codex Vitae 2024</h1>
+                    <p class="f3 pb2">A documentation of my beliefs in the year 2024</p>
+                    <a class="pt" href="./codex-2022.html">Codex Vitae 2022</a>
                     <a class="pt" href="./codex-2020.html">Codex Vitae 2020</a>
+                    <a class="pt" href="./codex-2019.html">Codex Vitae 2019</a>
                 </div>
                 <h3 class="f3 pb3" id="rtlb">Rules to Live By
                 </h3>
                 </h3>
                 <!-- rule -->
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">I will strive to live life through common sense and logic.</p>
+                    <p class="f5 dark-gray">Nothing is more important than the love, protection, nurture and safety of my child.</p>
                 </div>
                 <!-- rule -->
+                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
+                    <p class="f5 dark-gray">Ownership of actions.</p>
+                </div>
+                <!-- rule -->
+                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
+                    <p class="f5 dark-gray">Responsibility for actions taken.</p>
+                </div>
+                <!-- rule -->
+                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
+                    <p class="f5 dark-gray">Confidence through actions.</p>
+                </div>
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
                     <p class="f5 dark-gray">I will be grateful for each day of my life.</p>
                 </div>
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">I will do what needs to be done, not what I want to do.</p>
-                </div>
-                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">Rather than feeling guilt, I'll take responsibility.</p>
+                    <p class="f5 dark-gray">I will do what needs to be done.</p>
                 </div>
                 <!-- rule -->
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
-                    <p class="f5 dark-gray">I will be honest anddirect.
+                    <p class="f5 dark-gray">I will be honest and direct.
                     </p>
                 </div>
                 <!-- rule -->
@@ -91,40 +100,45 @@
                 <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
                     <p class="f5 dark-gray">I will not forget the shortness of life.</p>
                 </div>
+                <!-- rule -->
+                <div class="mb3 hover bl bw2 b--orange pa3 bg-white flex">
+                    <p class="f5 dark-gray">I will forgive.</p>
+                </div>
+                
                 <h3 class="f3 pb3" id="health">Health
                 </h3>
                 <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
-                    <p class="f5 dark-gray">It's my responsibility to be in good health.
+                    <p class="f5 dark-gray">I owe myself and my close ones my own good health.
                     </p>
                 </div>
                 <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
-                    <p class="f5 dark-gray">Movement is health.
-                    </p>
-                </div>
-                <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
-                    <p class="f5 dark-gray">A healthy body without a healthy mind is a mere shell.
+                    <p class="f5 dark-gray">Reject alcohol.
                     </p>
                 </div>
                 <h3 class="f3 pb3" id="mental-health">Mental Health
                 </h3>
+                <div class="mb3 hover bl bw2 b--green pa3 bg-white flex">
+                    <p class="f5 dark-gray">A healthy body without a healthy mind is a mere shell.
+                    </p>
+                </div>
                 <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
-                    <p class="f5 dark-gray">Psychotheraphy is crucial for one's healing.
+                    <p class="f5 dark-gray">I will resist temptation, I will strengthen and discipline mind.
+                    </p>
+                </div>
+                <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
+                    <p class="f5 dark-gray">I will keep my mind pure and clear.
+                    </p>
+                </div>
+                <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
+                    <p class="f5 dark-gray">Do not fear anxiety - it's a call for action. Act upon it.
                     </p>
                 </div>
                 <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
                     <p class="f5 dark-gray">Self-desception and wishful thinking degrade one's mind.
                     </p>
                 </div>
-                <div class="mb3 hover bl bw2 b--light-purple pa3 bg-white flex">
-                    <p class="f5 dark-gray">Forgiveness is a powerful healer.
-                    </p>
-                </div>
+
                 <h3 class="f3 pb3" id="relationships">Relationships</h3>
-                <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
-                    <p class="f5 dark-gray">Relationships are like muscle fibre – once broken, they could heal, but
-                        they'll never going to be as strong.
-                    </p>
-                </div>
                 <div class="mb3 hover bl bw2 b--light-pink pa3 bg-white flex">
                     <p class="f5 dark-gray">If you love someone and you feel they're the one – marry them.
                     </p>
