--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             <a href="/writing.html" class="about">writing</a>
             <a href="/about.html" class="about">about</a>
             <a href="/photos.html" class="about mobile-photos">photos</a>
-            <a href="/codex-2022.html" class="about codex">codex</a>
+            <a href="/codex-2024.html" class="about codex">codex</a>
             <!-- <a href="writing.html" class="writing">writing</a> -->
             <!-- <a href="/photos.html" class="writing">photos</a> -->
         </div>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="lh-copy project-body">
-                    <div class="tc tl-m tl-l pt4-l mb3">
+                    <div class="tc tl-m tl-l pt4-l mb2">
                         <h2 class="f3 f1-l">Personal Projects</h2>
                         <p class="f4 f3-ns">
                             My digital works maintained by passion and filtered coffee
@@ -86,33 +86,45 @@
                     <div class="mt3 br4 anim1 bg-white">
                         <a class="no-underline color-inherit relative test" href="brewculator.html">
                             <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between">
-                                <div>
+                                <div class="mr2">
                                     <h3 class="f3 f2-ns b dark-gray mb1">
                                         Brewculator
                                     </h3>
+                                    <p class="">
+                                        A number of ratios for popular brewing methods, fine control over its measuring units and general coffee brewing tips all together in one powerful coffee assistant.
+                                    </p>
                                 </div>
+                                <img class="w-50" src="./photos/brewculator/brewculator-mockup-index.png">
                             </div>
                         </a>
                     </div>
                     <div class="mt3 br4 anim1 bg-white">
                         <a class="no-underline color-inherit relative test" href="improvedmind.html">
-                            <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between items-center">
-                                <div>
+                            <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between">
+                                <div class="mr2">
                                     <h3 class="f3 f2-ns b dark-gray mb1">
                                         Theimprovedmind blog
                                     </h3>
+                                    <p class="">
+                                        A number of ratios for popular brewing methods, fine control over its measuring units and general coffee brewing tips all together in one powerful coffee assistant.
+                                    </p>
                                 </div>
+                                <img class="w-33" src="./photos/circles-1.svg">
                             </div>
                         </a>
                     </div>
                     <div class="mt3 br4 anim1 bg-white">
-                        <a class="no-underline color-inherit relative test" href="weare.html">
-                            <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between items-center">
-                                <div class="">
+                        <a class="no-underline color-inherit relative test" href="improvedmind.html">
+                            <div class="mb3 tc tl-ns pa4 db flex-m flex-l justify-between">
+                                <div class="mr2">
                                     <h3 class="f3 f2-ns b dark-gray mb1">
                                         We-are Design
                                     </h3>
+                                    <p class="pr4">
+                                        We-are interviews a mixture of popular designers and creatives from countries with underdeveloped communities, creating a locus where we exchange our personal and professional experience.
+                                    </p>
                                 </div>
+                                <img class="w-50" src="./photos/weare-photos/wearestamp.png">
                             </div>
                         </a>
                     </div>
@@ -123,7 +135,7 @@
                     <!-- <img class="logo" src="logo.svg"> -->
                     <h3 class="f4 b">AT</h3 class="f3">
                 </a>
-                <p>Made with love and coffee in Sofia, 2022 </p>
+                <p>Made with love and coffee in Sofia, 2024 </p>
                 <div class="nav-items">
                     <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
                     <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
