--- a/index.html
+++ b/index.html
@@ -48,35 +48,30 @@
     <header class="main-header anim1">
       <div class="info flex-center items-center">
         <!-- Info about me -->
-        <p class="f4 f3-ns lh-copy">Hey there, I'm Alexander. I'm a dad, a designer, <a href="./writing.html"
-            target="_blank">I write</a> and
-          sometimes I even read. Currently I'm helping develop the world of No-code at <a href="">Quickbase</a>
+        <p class="f4 f3-ns lh-copy">Hey there! I'm Alexander, a father, UX Design Lead at <a href="https://www.quickbase.com/">Quickbase</a> <a href="./writing.html"
+          aspiring target="_blank"> hobbyist writer</a> and
+            and 
+             grappler.
         </p>
         </br>
-        <p class="f4 f3-ns lh-copy"> Before Quickbase I was working as a
-          Bitcoin Designer at <a href="https://peakshift.com/" target="_blank">Peak Shift</a>
+        <p class="f4 f3-ns lh-copy"> Before diving into Quickbase, I navigated the world of cryptocurrency as a Bitcoin Designer at <a href="https://peakshift.com/" target="_blank">Peak Shift</a>
           </br>
-        <p class="f4 f3-ns lh-copy"> Before Peak Shift, I was a part of the Core Product Design Team at <a
-            href="https://www.toptal.com/" target="_blank">Toptal</a>.</p>
+        <p class="f4 f3-ns lh-copy">I was a key player in the Core Product Design Team at <a
+            href="https://www.toptal.com/" target="_blank">Toptal</a>. pushing the boundaries of freelance work</p>
         </br>
         <p class="f4 f3-ns lh-copy">
-          Before Toptal I was building the mobile products and design systems for <a
-            href="https://apps.apple.com/us/app/pr%C3%BCvit-pulse/id1097690467" target="_blank">Prüvit ↗</a> at <a
-            href="https://marketvision.com/" target="_blank">MarketVision ↗</a>.
-        </p>
-        </br>
-        <p class="f4 f3-ns lh-copy">
-          I tried to run my own newsletter called <a href="https://alexandertraykov.substack.com/"
+          My journey also took me through MarketVision, where I led the design for mobile products and systems for <a
+            href="https://apps.apple.com/us/app/pr%C3%BCvit-pulse/id1097690467" target="_blank">Prüvit ↗</a>
+            Off the clock, I launched.
+            <br>
+           <a href="https://alexandertraykov.substack.com/"
             target="_blank">Refracted</a>,
-          which is set
-          to explore
-          how design, technology and culture intertwine in our day-to-day lives. I have also created a bunch of
-          projects like <a href="./brewculator.html">Brewculator</a>, <a href="https://bgcreativesforua.com/"
+            a newsletter exploring the intersection of design, technology, and culture.  My creative spark also ignited projects like <a href="./brewculator.html">Brewculator</a>, <a href="https://bgcreativesforua.com/"
             target="_blank">Bulgarian
             Creatives for Ukraine ↗</a>,
           <a href="https://theimprovedmind.com/" target="_blank">The Improved Mind ↗</a> and <a
             href="http://www.we-are.cc/" target="_blank">We Are
-            ↗</a>
+            ↗</a> blending design with purpose.
         </p>
       </div>
     </header>
@@ -104,7 +99,7 @@
     <!-- <img class="logo" src="logo.svg"> -->
     <h3 class="f4 b">AT</h3 class="f3">
   </a>
-  <p>Made with love and coffee in Sofia, 2022 </p>
+  <p>Made with love and coffee in Sofia, 2024 </p>
   <div class="nav-items">
     <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
     <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
