--- a/writing.html
+++ b/writing.html
@@ -39,42 +39,39 @@
       <a href="/writing.html" class="about">writing</a>
       <a href="/about.html" class="about">about</a>
       <a href="/photos.html" class="about mobile-photos">photos</a>
-      <a href="/codex-2022.html" class="about codex">codex</a>
+      <a href="/codex-2024.html" class="about codex">codex</a>
       <!-- <a href="writing.html" class="writing">writing</a> -->
       <!-- <a href="/photos.html" class="writing">photos</a> -->
     </div>
   </nav>
   <div class="container">
-    <!-- Design writing -->
-    <!-- <div class="pb2 section">
-        <div class="lh-copy project-body">
-          <div class="pt5 bb mb3">
-            <h1 class="f1-ns f2">Words on design</h1>
-            <p class="f5 f3">My thoughts on design and everything related</p>
-          </div>
-          <div class="test">
-            <a
-              class="no-underline color-inherit relative test"
-              href="./blogposts/2019-recap.html"
-            >
-              <div
-                class="mb3 tc tl-ns blogpost pa3 br-gray db flex-m flex-l justify-between items-center"
-              >
-                <h3 class="f3 f2-ns b dark-gray">
-                  2019 year in review
-                </h3>
-                <p class="f5">04 January 2020</p>
-              </div>
-            </a>
-            <span class="snek f2"> 🎉🎉</span>
-          </div>
-        </div>
-      </div> -->
     <div class="pb2 section">
       <div class="lh-copy project-body">
         <div class="pt5 bb mb3">
           <h1 class="f1-ns f2">Personal writing</h1>
           <p class="f5 f3">Words about how I percieve life✍</p>
+        </div>
+        <div class="test">
+          <a class="no-underline color-inherit relative test" href="./blogposts/introspection-compassion-correction.html">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
+              <h3 class="f3 f2-ns b dark-gray">
+               Introspection, compassion, correction
+              </h3>
+              <p class="f5">01 May 2024</p>
+            </div>
+          </a>
+          <span class="snek f2"> 🔁🔁</span>
+        </div>
+        <div class="test">
+          <a class="no-underline color-inherit relative test" href="./blogposts/bjj-bluebelt.html">
+            <div class="mb3 tc tl-ns blogpost pa3 bg-white br4 db flex-m flex-l justify-between items-center">
+              <h3 class="f3 f2-ns b dark-gray">
+                On receiving my blue belt
+              </h3>
+              <p class="f5">30 July 2023</p>
+            </div>
+          </a>
+          <span class="snek f2"> 🟦🟦</span>
         </div>
         <div class="test">
           <a class="no-underline color-inherit relative test" href="./blogposts/2019-recap.html">
@@ -136,7 +133,7 @@
         <!-- <img class="logo" src="logo.svg"> -->
         <h3 class="f4 b">AT</h3 class="f3">
       </a>
-      <p>Made with love and coffee in Sofia, 2022 </p>
+      <p>Made with love and coffee in Sofia, 2024 </p>
       <div class="nav-items">
         <a href="https://www.instagram.com/alex.works/" class="about"><span>📸</span>Instagram</a>
         <a href="https://twitter.com/alextraykov" class="about"><span>🐦</span>Twitter</a>
