--- a/blogposts/introspection-compassion-correction.html
+++ b/blogposts/introspection-compassion-correction.html
@@ -113,7 +113,7 @@
             <h3 class="pb2 f3">Post-Factum Reflection on Behavior Throughout the Day
             </h3>
             <div class="section bg-near-white pa4 mb4 br4">
-                <p class="pb4 lh-copy">Example: While training I feel this anger build up inside of me. I pause and ask myself.</p>
+                <p class="pb4 lh-copy">Multiple times a day, usually when things quiet down, I think about interactions, conflicts or frustrations that occurred. I reflect on how I handled the situation following questions of this sort.</p>
                 <ul class="lh-copy pl4">
                     <li class="pb2">Was my behaviour aligned with my moral values?</li>
                     <li class="pb2">Could I have handled the sitaution differently to achieve a better outcome?</li>
