--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             Greetings, friend! I'm Alexander, a dedicated full-time father, husband, and designer.
           </p>
 
-          <img class="br5 pb3" src="./photos/about-photos/me-alpes.png">
+          <img class="br5 pb3" src="./photos/about-photos/family.jpg">
           <p class="f5 f3-m f3-l pb3">
             My design journey began at 17, sparked by an opportunity from my graphic design teacher. Crafting a successful poster for the Sofia Philharmonic Orchestra ignited a passion that resonated deeply within me. Since that pivotal moment, I felt as design has been my calling, and I've embraced it since.
           </p>
